--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/clara.gesset/Downloads/mysql-connector-java-5.1.49-bin (2).jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
